# shellmounter

./: .gitignore  AUDIT.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ideas.md  prompt.md  rust-toolchain.toml
doc/: iconos.md
resources/: Info.plist  app-icon.icns  shellmounter.desktop
script/: bundle-linux  bundle-mac  bundle-windows.ps1  generate-icons
src/: assets.rs  fs.rs  main.rs  pty.rs
src/ai/: agent.rs  chat.rs  mod.rs
src/ai/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/ai/ui/: agent_switcher.rs  chat_view.rs  input_bar.rs  mini_window.rs  todo_strip.rs
src/assets/: preview_init.js
src/db/: hosts.rs  migrate.rs  mod.rs
src/devtools/: mod.rs
src/git/: mod.rs
src/kanban/: mod.rs
src/platform/: linux.rs  macos.rs  windows.rs
src/ssh/: agent.rs  channel.rs  import_config.rs  inactivity.rs  keys.rs  mod.rs  port_forward.rs  session.rs  sftp.rs  snippets.rs
src/terminal/: mod.rs  split.rs  view.rs
src/ui/: app.rs  host_editor.rs  host_tree.rs  mod.rs  port_forward.rs  sftp_panel.rs  snippet_panel.rs  terminal_tab.rs  theme.rs  vault_unlock.rs
src/ui/views/: devtools.rs  git.rs  hosts.rs  kanban.rs  keychain.rs  known_hosts.rs  logs.rs  mod.rs  modal.rs  port_forward.rs  settings.rs  sftp.rs  snippets.rs  status_bar.rs  terminal.rs  widgets.rs
src/update/: mod.rs
src/vault/: crypto.rs  store.rs
src/webview/: mod.rs
