[package]
name = "shellmounter"
version = "0.1.0"
edition = "2024"
description = "Open-source SSH/SFTP client — fast, native, cross-platform. Termius alternative."
license = "MIT"

[dependencies]
aes-gcm = "0.10.3"
alacritty_terminal = "0.26.0"
anyhow = "1.0.102"
arc-swap = "1.9.1"
argon2 = "0.5.3"
dirs = "6.0.0"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
gpui-component-macros = "0.5.1"
hex = "0.4.3"
hostname = "0.4.2"
keyring = "4.0.1"
log = "0.4.32"
parking_lot = "0.12.5"
rand = "0.10.1"
# HTTP client for R2 updates (rustls = no OpenSSL dependency)
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json", "gzip", "blocking"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
russh = "0.61.2"
russh-keys = "0.49.2"
russh-sftp = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.2", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3.27.0"
