[package]
name = "shellmounter"
version = "0.1.0"
edition = "2021"
description = "Open-source SSH/SFTP client — fast, native, cross-platform. Termius alternative."
license = "MIT"

[dependencies]
# Crypto — pinned to stable APIs
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
zeroize = "1"

# SSH — russh 0.44+ works with these
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.1"

# Terminal — alacritty_terminal 0.24 has Term::write()
alacritty_terminal = { version = "0.24", optional = true }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP / updates
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }

# Utilities
anyhow = "1"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
hostname = "0.3"
parking_lot = "0.12"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
shellexpand = "3"

# GUI (optional)
gpui-component = { version = "0.5", optional = true }
gpui-component-assets = { version = "0.5", optional = true }
gpui-component-macros = { version = "0.5", optional = true }
notify-rust = { version = "4", optional = true }

[features]
default = []
gui = ["alacritty_terminal", "gpui-component", "gpui-component-assets", "gpui-component-macros", "notify-rust"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3"
