[package]
name = "termia"
version = "0.1.0"
edition = "2021"
description = "Termia — Terminal + IA. Local PTY shell with AI chat, Git, Kanban, and dev tools."
license = "MIT"

[dependencies]
# Terminal
alacritty_terminal = { version = "0.24", optional = true }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP — AI providers + web
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json", "stream"] }

# Utilities
anyhow = "1"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
smol = "2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

# GUI (optional)
gpui = { git = "https://github.com/zed-industries/zed", optional = true }
gpui_platform = { git = "https://github.com/zed-industries/zed", optional = true, features = ["wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", optional = true }
notify-rust = { version = "4", optional = true }
rust-embed = { version = "8", features = ["interpolate-folder-path", "include-exclude"], optional = true }

# Web preview — wry webview (optional, needs webkit2gtk-4.1-dev on Linux)
wry = { version = "0.48", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
zed-font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "94b0f28166665e8fd2f53ff6d268a14955c82269", features = ["source-fontconfig-dlopen"], optional = true }

[features]
default = []
gui = ["alacritty_terminal", "gpui", "gpui_platform", "gpui-component", "notify-rust", "rust-embed", "zed-font-kit"]
webview = ["wry"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
